feat: add basic character support
Implement uart_getc() and uart_putc(), analogous to getc() and putc()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,45 +1,60 @@
 cmake_minimum_required(VERSION 3.30)
 
-set(PRODUCT_NAME uart_example)
 set(PROJECT_VERSION	0.0.1)
 project(ArduinoUART VERSION ${PROJECT_VERSION} LANGUAGES C)
+
+set(LIBNAME	uart)
+set(EXNAME	uart_example)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_C_COMPILER			avr-gcc)
 set(CMAKE_C_STANDARD			17)
 set(CMAKE_C_STANDARD_REQUIRED	True)
-set(C_EXTENSIONS				OFF)
+set(C_EXTENSIONS				ON)
 
 set(ARDUINO_BOARD			uno)
 set(ARDUINO_MICROCONTROLER	atmega328p)
-set(ARDUINO_BAUD_RATE		115200)
+set(ARDUINO_BAUD_RATE		11520)
 set(ARDUINO_FREQUENCY		16000000)
 set(ARDUINO_PROGRAMMER		arduino)
 set(ARDUINO_BOARD_PORT		/dev/ttyUSB0)
 
 add_compile_options(
-	-mmcu=${ARDUINO_MICROCONTROLER}
-	-pedantic
 	-Wall
 	-Wextra
 	-Werror
 	-Os
-	-funsigned-char
-	-funsigned-bitfields
 	-DF_CPU=${ARDUINO_FREQUENCY}UL
+	-DBAUD=${ARDUINO_BAUD_RATE}UL
+	-mmcu=${ARDUINO_MICROCONTROLER}
+	-DUART_TRAILING_NEWLINE
 )
 
-set(C_SOURCES
-	src/main.c
+add_link_options(
+	-mmcu=${ARDUINO_MICROCONTROLER}
 )
 
+add_library(${LIBNAME} STATIC src/uart.c)
 
-add_executable(${PRODUCT_NAME}.elf ${C_SOURCES})
+add_executable(${EXNAME}.elf src/uart_example.c)
+target_link_libraries(${EXNAME}.elf ${LIBNAME})
 
-add_custom_target(strip ALL avr-strip ${PRODUCT_NAME}.elf -o ${PRODUCT_NAME}_stripped.elf DEPENDS ${PRODUCT_NAME}.elf)
-add_custom_target(hex ALL avr-objcopy -R .eeprom -O ihex ${PRODUCT_NAME}_stripped.elf ${PRODUCT_NAME}.hex DEPENDS strip)
-add_custom_target(eeprom ALL avr-objcopy -j .eeprom -O ihex ${PRODUCT_NAME}_stripped.elf ${PRODUCT_NAME}.eep DEPENDS strip)
+add_custom_target(hex ALL
+	avr-objcopy
+	-S
+	-R .eeprom
+	-O ihex
+	${EXNAME}.elf
+	${EXNAME}.hex
+	DEPENDS ${EXNAME}.elf
+)
 
-add_custom_target(upload avrdude -c ${ARDUINO_PROGRAMMER} -p ${ARDUINO_MICROCONTROLER} -U flash:w:${PRODUCT_NAME}.hex -P ${ARDUINO_BOARD_PORT} DEPENDS hex)
-add_custom_target(upload-eeprom avrdude -c ${ARDUINO_PROGRAMMER} -p ${ARDUINO_MICROCONTROLER} -U eeprom:w:${PRODUCT_NAME}.eep -P ${ARDUINO_BOARD_PORT} DEPENDS eeprom)
+add_custom_target(upload
+	avrdude
+	-c ${ARDUINO_PROGRAMMER}
+	-p ${ARDUINO_MICROCONTROLER}
+	-U flash:w:${EXNAME}.hex
+	-P ${ARDUINO_BOARD_PORT}
+	DEPENDS hex
+)
